# wasm-functions

./: .gitignore  README.md  USAGE.md  database.go  go.mod  go.sum  main.go  models.go  schema.sql  server.go  wasm.go
examples/delete_todos/: Cargo.toml
examples/delete_todos/src/: main.rs
examples/get_todos/: Cargo.toml
examples/get_todos/src/: main.rs
examples/json/: delete.json  get.json  post.json  update.json
examples/post_todos/: Cargo.toml  build.sh
examples/post_todos/src/: main.rs
examples/update_todos/: Cargo.toml  build.sh
examples/update_todos/src/: main.rs
