[package]
name = "get_todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.54"

rusqlite = { version="0.26.3", features = ["bundled"] }
sqlite-vfs = "0.1.0"
